<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_setting_startup"
    tools:context="com.example.admin.pilotage.SettingStartupActivity">

    <TextView
        android:id="@+id/text_Indicateurs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/chk_battery"
        android:layout_alignBottom="@+id/chk_battery"
        android:layout_alignParentStart="false"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="15dp"
        android:editable="false"
        android:enabled="true"
        android:text="@string/indicators"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold|normal|italic" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery"
        android:id="@+id/chk_battery"
        android:textAlignment="textEnd"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/text_Indicateurs"
        android:layout_marginLeft="2dp"
        android:layout_alignParentEnd="false"
        android:singleLine="false"
        android:layout_alignParentStart="false"
        android:allowUndo="false"
        android:layout_marginTop="5dp"
        android:checked="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altitude"
        android:id="@+id/chk_altitude"
        android:textAlignment="textEnd"
        android:layout_marginLeft="5dp"
        android:singleLine="false"
        android:allowUndo="false"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/chk_battery"
        android:layout_marginTop="5dp"
        android:checked="true" />

    <CheckBox
        android:id="@+id/chk_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/chk_altitude"
        android:allowUndo="false"
        android:checked="true"
        android:singleLine="false"
        android:text="@string/speed"
        android:textAlignment="textEnd" />

    <CheckBox
        android:id="@+id/chk_forward_backward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/chk_battery"
        android:layout_alignTop="@+id/chk_battery"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="32dp"
        android:allowUndo="false"
        android:checked="true"
        android:singleLine="false"
        android:text="@string/forward_backward_short"
        android:textAlignment="textEnd" />

    <CheckBox
        android:id="@+id/chk_left_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/chk_altitude"
        android:layout_alignTop="@+id/chk_altitude"
        android:layout_marginStart="-79dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="65dp"
        android:allowUndo="false"
        android:checked="true"
        android:singleLine="false"
        android:text="@string/left_right_short"
        android:textAlignment="textEnd" />

    <CheckBox
        android:id="@+id/chk_rotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/chk_speed"
        android:layout_alignTop="@+id/chk_battery"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="35dp"
        android:allowUndo="false"
        android:checked="true"
        android:singleLine="false"
        android:text="@string/rotation"
        android:textAlignment="textEnd" />


    <CheckBox
        android:id="@+id/chk_video_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/chk_battery"
        android:layout_alignTop="@+id/chk_battery"
        android:layout_marginStart="103dp"
        android:layout_marginTop="67dp"
        android:allowUndo="false"
        android:checked="true"
        android:singleLine="false"
        android:text="@string/video"
        android:textAlignment="textEnd" />

    <CheckBox
        android:id="@+id/chk_debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/chk_rotation"
        android:layout_alignTop="@+id/chk_video_mode"
        android:layout_marginStart="12dp"
        android:layout_marginTop="1dp"
        android:allowUndo="false"
        android:checked="true"
        android:singleLine="false"
        android:text="@string/debug"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/text_interface_pilotage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="130dp"
        android:text="@string/controltype_choice"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold|italic" />

    <Spinner
        android:id="@+id/spinner_type_pilotage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_interface_pilotage"
        android:layout_alignStart="@+id/chk_altitude_max"
        android:layout_alignBottom="@+id/text_interface_pilotage"
        android:layout_marginLeft="34dp"
        android:entries="@array/controltype_arrays"
        android:prompt="@string/pilotagetype_prompt"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/text_config_drone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_interface_pilotage"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="29dp"
        android:text="@string/drone_configuration"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold|normal|italic" />

    <TextView
        android:id="@+id/text_cameratype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_config_drone"
        android:layout_alignEnd="@+id/text_interface_pilotage"
        android:layout_marginLeft="15dp"
        android:text="@string/cameratype_choice"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cameraspinner"
        android:entries="@array/cameratype_arrays"
        android:prompt="@string/cameratype_prompt"
        android:layout_marginLeft="34dp"
        android:layout_below="@+id/text_cameratype"
        android:layout_alignStart="@+id/text_config_drone"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:id="@+id/text_altitude_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cameraspinner"
        android:layout_alignStart="@+id/seekbar_altitude_max"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/max_altitude"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <CheckBox
        android:id="@+id/chk_altitude_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_altitude_max"
        android:layout_alignBottom="@+id/text_altitude_max"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="-7dp"
        android:layout_toEndOf="@+id/text_config_drone"
        android:allowUndo="false"
        android:checked="false"
        android:singleLine="false"
        android:text="@string/altitude_limit_toggle"
        android:textAlignment="textEnd" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekbar_altitude_max"
        android:max="5000"
        android:layout_below="@+id/text_altitude_max"
        android:layout_marginTop="3dp"
        android:layout_alignStart="@+id/text_cameratype"
        android:layout_alignEnd="@+id/chk_rotation" />

    <TextView
        android:id="@+id/text_maximum_yaw_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekbar_altitude_max"
        android:layout_alignStart="@+id/seekbar_altitude_max"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/max_yaw_speed"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekbar_yaw_speed"
        android:max="5000"
        android:layout_below="@+id/text_maximum_yaw_speed"
        android:layout_alignStart="@+id/seekbar_altitude_max"
        android:layout_marginTop="1dp"
        android:layout_alignEnd="@+id/seekbar_altitude_max" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekbar_vertical_speed_max"
        android:max="5000"
        android:layout_below="@+id/text_maximum_vertical_speed"
        android:layout_marginTop="1dp"
        android:layout_alignStart="@+id/seekbar_yaw_speed"
        android:layout_alignEnd="@+id/seekbar_yaw_speed" />

    <TextView
        android:id="@+id/text_maximum_vertical_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekbar_yaw_speed"
        android:layout_alignStart="@+id/text_maximum_yaw_speed"
        android:layout_marginTop="5dp"
        android:text="@string/max_vertical_speed"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/text_maximum_pitch_roll_angles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekbar_vertical_speed_max"
        android:layout_alignStart="@+id/text_maximum_vertical_speed"
        android:layout_marginTop="5dp"
        android:text="@string/max_pitchroll_angles"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="0"
        android:id="@+id/txt_alt_max_settings"
        android:layout_alignTop="@+id/text_altitude_max"
        android:layout_toEndOf="@+id/text_altitude_max"
        android:layout_marginLeft="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="0"
        android:id="@+id/txt_yaw_max_settings"
        android:layout_above="@+id/seekbar_yaw_speed"
        android:layout_toEndOf="@+id/text_maximum_yaw_speed"
        android:layout_marginLeft="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="0"
        android:id="@+id/txt_vert_max_settings"
        android:layout_alignTop="@+id/text_maximum_vertical_speed"
        android:layout_toEndOf="@+id/text_maximum_vertical_speed"
        android:layout_marginLeft="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="0"
        android:id="@+id/txt_pitch_roll_max_settings"
        android:layout_above="@+id/seekbar_pitch_roll_max"
        android:layout_toEndOf="@+id/text_maximum_pitch_roll_angles"
        android:layout_marginLeft="2dp" />

    <CheckBox
        android:id="@+id/chk_authorized_zone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chk_virtual_joysticks"
        android:layout_alignStart="@+id/seekbar_pitch_roll_max"
        android:checked="false"
        android:onClick="ClickAccept"
        android:text="@string/authorized_zone_toggle"
        android:textStyle="bold" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekbar_pitch_roll_max"
        android:max="5000"
        android:layout_below="@+id/text_maximum_pitch_roll_angles"
        android:layout_alignStart="@+id/seekbar_vertical_speed_max"
        android:layout_alignEnd="@+id/seekbar_vertical_speed_max" />

    <CheckBox
        android:id="@+id/chk_virtual_joysticks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekbar_pitch_roll_max"
        android:layout_alignStart="@+id/chk_authorized_zone"
        android:layout_marginTop="14dp"
        android:text="@string/virtual_joysticks_toggle" />


</RelativeLayout>
