<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <SurfaceView
        android:id="@+id/surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView android:text="@string/AT_CMD" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtATCMD"
        android:layout_marginLeft="75dp"
        android:elegantTextHeight="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:clickable="false" />

    <Button
        android:id="@+id/buttDecollage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#85ffffff"
        android:onClick="Decollage"
        android:text="@string/start"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttAtterissage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#85ffffff"
        android:onClick="Aterissage"
        android:text="@string/landing"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttUrgence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="#F44336"
        android:onClick="Urgence"
        android:text="@string/emergency_shutdown"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="XMS"
        android:id="@+id/indic_periodic_task"
        android:layout_alignBottom="@+id/txtATCMD"
        android:layout_alignParentStart="true" />

    <com.example.admin.pilotage.JoystickView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/JoyRight"
        android:layout_row="41"
        android:layout_column="0"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/indic_altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttAtterissage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/altitude"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0015ff" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LED"
        android:id="@+id/butt_led"
        android:onClick="Led"
        android:background="#85ffffff"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/butt_shot"
        android:visibility="visible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SHOT"
        android:id="@+id/butt_shot"
        android:onClick="Shot"
        android:background="#85ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/indic_batterie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/JoyLeft"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:text="@string/battery"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0015ff" />

    <TextView
        android:id="@+id/indic_vitesse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/indic_altitude"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/speed"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0015ff" />

    <TextView
        android:id="@+id/indic_avant_arriere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/indic_vitesse"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/forward_backward_short"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0015ff" />

    <TextView
        android:id="@+id/indic_gauche_droite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/indic_avant_arriere"
        android:layout_alignEnd="@+id/indic_avant_arriere"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="33dp"
        android:text="@string/left_right_short"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0015ff" />

    <TextView
        android:id="@+id/indic_rotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/indic_gauche_droite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/rotation"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0015ff" />

    <Button
        android:id="@+id/butt_data_flying"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:enabled="true"
        android:onClick="ShowSimpleFlightData"
        android:text="@string/flight_data" />

    <com.example.admin.pilotage.JoystickView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/JoyLeft"
        android:layout_row="41"
        android:layout_column="0"
        android:layout_below="@+id/indic_gauche_droite"

        android:layout_alignParentStart="true" />

    k


</RelativeLayout>
