<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <SurfaceView
        android:id="@+id/surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView android:text="@string/AT_CMD" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtATCMD"
        android:layout_marginLeft="75dp"
        android:elegantTextHeight="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:clickable="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/buttDecollage"
        android:onClick="Decollage"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="#85ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing"
        android:id="@+id/buttAtterissage"
        android:onClick="Aterissage"
        android:layout_centerHorizontal="true"
        android:background="#85ffffff" />

    <Button
        android:id="@+id/buttUrgence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="#F44336"
        android:onClick="Urgence"
        android:text="@string/emergency_shutdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="XMS"
        android:id="@+id/indic_periodic_task"
        android:layout_alignBottom="@+id/txtATCMD"
        android:layout_alignParentStart="true" />

    <com.example.admin.pilotage.JoystickView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/JoyRight"
        android:layout_row="41"
        android:layout_column="0"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="110dp"
        android:layout_marginRight="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Altitude"
        android:id="@+id/indic_altitude"
        android:layout_below="@+id/buttAtterissage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="#0015ff" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LED"
        android:id="@+id/butt_led"
        android:onClick="Led"
        android:background="#85ffffff"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/butt_shot" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SHOT"
        android:id="@+id/butt_shot"
        android:onClick="Shot"
        android:background="#85ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/indic_batterie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttDecollage"
        android:layout_alignBottom="@+id/buttDecollage"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="0dp"
        android:layout_toEndOf="@+id/buttDecollage"
        android:text="Battery"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0015ff" />

    <TextView
        android:id="@+id/indic_vitesse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/indic_altitude"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="Speed"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0015ff" />

    <TextView
        android:id="@+id/indic_avant_arriere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/indic_vitesse"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="Forward / Backward"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0015ff" />

    <TextView
        android:id="@+id/indic_gauche_droite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/indic_avant_arriere"
        android:layout_alignEnd="@+id/indic_avant_arriere"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="36dp"
        android:text="Left / Right"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0015ff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Rotation"
        android:id="@+id/indic_rotation"
        android:layout_below="@+id/indic_gauche_droite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textColor="#0015ff" />

    <Button
        android:id="@+id/butt_data_flying"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/JoyRight"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:enabled="true"
        android:onClick="ShowSimpleFlightData"
        android:text="@string/flight_data" />

    <TextView
        android:id="@+id/txtDebugAv_Arr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/indic_batterie"
        android:layout_alignTop="@+id/indic_altitude"
        android:text="@string/forward_backward_short"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ff0000"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/txt_Debug_GD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtDebugAv_Arr"
        android:layout_alignBottom="@+id/indic_rotation"
        android:layout_marginRight="20dp"
        android:text="@string/left_right_short"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ff0000"
        android:textSize="25dp" />


</RelativeLayout>
